fixed leader on mobile

--- a/src/pages/LeaderPage.module.css
+++ b/src/pages/LeaderPage.module.css
@@ -30,3 +30,36 @@
     min-width: 50px;
 }
 
+.photo {
+    height: 500px;
+    width: 350px;
+    border-radius: 10px;
+}
+
+
+
+@media only screen and (max-width: 900px) {
+    .photo {
+        height: 350px;
+        width: 250px;
+        margin-bottom: 15px;
+    }
+
+    .section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .info {
+        width: 100%;
+    }
+
+    .text {
+        margin-bottom: 15px;
+    }
+
+
+
+  }
